--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -1,4 +1,4 @@
-/*Blogwide*/
+/*Blogwide1*/
 #blog-container{
 	padding: 60px 0;
 }
@@ -37,7 +37,7 @@
     width: 100%;
     float: left;
     clear: both;
-    margin-top: 79px;
+    margin-top: 60px;
 }
 
 .blog-list li,
@@ -80,17 +80,18 @@ position: relative;
 padding-left: 280px;
 }
 
+/*Circulo y numero de lista*/
 .blog-list .blog-item .counter {
 width: 100px;
 height: 100px;
 display: block;
-padding: 0 5px;
+padding: 0 2px;
 text-align: center;
 line-height: 100px;
 border-radius: 100%;
 background-color: #1e1427;
 font-family: 'mulish';
-font-size: 30px;
+font-size: 1.6rem;
 letter-spacing: 0;
 margin: 0;
 color: #ae45ff;
@@ -101,6 +102,7 @@ top: 0;
 
 }
 
+/*Separador*/
 .blog-list .blog-item .counter:after {
     content: '';
     position: absolute;
@@ -175,7 +177,7 @@ top: 0;
 font-family: 'mulish';
 margin: 0;
 padding: 0;
-font-size: 18px;
+font-size: 1rem;
 letter-spacing: 0;
 margin-bottom: 3px;
 color: #777;
@@ -184,7 +186,7 @@ color: #777;
 .blog-list .title-w .title-h h3 {
     margin: 0;
     padding: 0;
-    font-size: 30px;
+    font-size: 1.8rem;
     font-family: 'mulish';
     letter-spacing: 0;
     font-weight: 400;
@@ -210,7 +212,7 @@ color: #777;
     min-height: 100px;
 }
 
-@media (min-width:769px) {
+@media (min-width:768px) {
     .blog-list .blog-item:hover .title-w .title-h p {
         color: #bbb;
     }
@@ -230,4 +232,80 @@ color: #777;
         bottom: -49px;
         border-radius: 0;
     }
+}
+@media (max-width:767px){
+.blog-list .blog-item .counter {
+width: 50px;
+height: 50px;
+display: block;
+padding: 0 1px;
+text-align: center;
+line-height: 50px;
+border-radius: 100%;
+font-size: 1rem;
+letter-spacing: 0;
+margin: 0;
+color: #ae45ff;
+font-weight: 300;
+position: absolute;
+left: 0;
+top: 0;
+    }
+
+.blog-list .blog-item .counter:after {
+        display: none;}
+
+.blog-list .title-w .arrow-b{
+    display: none;
+}
+
+.blog-list .title-w {
+width: 100%;
+float: left;
+clear: both;
+position: relative;
+padding-right: 0px;
+padding-left: 0px;
+min-height: 1px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+}
+
+.blog-list .title-w .abs-img {
+ display: none;
+}
+
+.blog-list .title-w .title-h p{
+    font-size: 0.9rem;
+}
+
+.blog-list .title-w .title-h h3 {
+    font-size: 1.2rem;
+}
+
+.blog-list {
+    margin-top: 10px;
+}
+
+.blog-title h3{
+font-size: 1.8rem;
+}
+
+.blog-list .blog-item-in {
+    width: 100%;
+    float: left;
+    clear: both;
+    position: relative;
+    padding-left: 80px;
+    }
+
+    /*Linea de abajo*/
+    .blog-list .blog-item {
+        width: 100%;
+        float: left;
+        clear: both;
+        position: relative;
+        padding: 100px 0;
+        }
 }
