--- a/scss/origin.scss
+++ b/scss/origin.scss
@@ -7,7 +7,12 @@
 @import "_contacto";
 @import "_servicios";
 
-
+.titulo1 {
+    font-size: 26px;
+ }
+ .titulo2 {
+    font-size: 22px;
+ }
 body {
         background-color: #333333;
         color: #ffffff;
