--- a/scss/origin.scss
+++ b/scss/origin.scss
@@ -7,10 +7,10 @@
 @import "_contacto";
 @import "_servicios";
 
-.titulo1 {
-    font-size: 26px;
+.texto1 {
+    font-size: 28px;
  }
- .titulo2 {
+ .texto2 {
     font-size: 22px;
  }
 body {
@@ -94,7 +94,7 @@ body {
             width: 100%;
             background-color: red;
             height: 550px;
-            background: url('../images/02.jpg') center center/cover;
+            background: url('../images/04.jpg') center center/cover;
             padding-bottom: 50px;
             display: flex;
             flex-direction: column;
