--- a/scss/_global-colors.scss
+++ b/scss/_global-colors.scss
@@ -4,6 +4,6 @@
     --secundary-color: #808e9b;
     --side-ads: #485470;
     --ads-footer: #2d3436;
-    --btn-color: #262626;
+    --btn-color: #1e1427;
 
 }
