--- a/scss/_portafolio.scss
+++ b/scss/_portafolio.scss
@@ -6,6 +6,10 @@
     grid-auto-rows: 150px;
     padding: 20px;
     grid-gap: 10px;
+    cursor: pointer;
+    }
+   #ajusteh2:hover{
+        background-color: #222222;
     }
 
     .portafolio__img {
