--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
   --secundary-color: #808e9b;
   --side-ads: #485470;
   --ads-footer: #2d3436;
-  --btn-color: #262626; }
+  --btn-color: #1e1427; }
 
 /*Portafolio -grid*/
 .portafolio-container {
@@ -20,7 +20,11 @@
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 150px;
   padding: 20px;
-  grid-gap: 10px; }
+  grid-gap: 10px;
+  cursor: pointer; }
+
+#ajusteh2:hover {
+  background-color: #222222; }
 
 .portafolio__img {
   width: 100%;
@@ -409,7 +413,7 @@ main h3 {
 
 /* CONTACT INFO */
 .contact-info {
-  background: #000; }
+  background: #1e1427; }
 
 .contact-info h4, .contact-info ul, .contact-info p {
   text-align: center;
@@ -448,6 +452,216 @@ main h3 {
   .contact-info ul,
   .contact-info p {
     text-align: left; } }
+
+* {
+  font-family: 'mulish'; }
+
+.centrar {
+  display: grid;
+  height: 100%;
+  width: 100%;
+  place-items: center; }
+
+.wrapper {
+  width: 380px;
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
+  margin-top: 30px; }
+
+.title {
+  font-weight: 600;
+  text-align: center;
+  line-height: 100px;
+  color: #fff;
+  user-select: none;
+  border-radius: 15px 15px 0 0;
+  background: linear-gradient(-135deg, #a53ef8, #1e1427); }
+
+.wrapper form {
+  padding: 10px 30px 50px 30px; }
+
+.field {
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
+  position: relative; }
+
+.field input {
+  height: 100%;
+  width: 100%;
+  outline: none;
+  font-size: 17px;
+  padding-left: 20px;
+  border: 1px solid lightgrey;
+  border-radius: 25px;
+  transition: all 0.3s ease; }
+
+.wrapper form .field input:focus,
+form .field input:valid {
+  border-color: #4158d0; }
+
+.wrapper form .field label {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  color: #999999;
+  font-weight: 400;
+  font-size: 17px;
+  pointer-events: none;
+  transform: translateY(-50%);
+  transition: all 0.3s ease; }
+
+form .field input:focus ~ label,
+form .field input:valid ~ label {
+  top: 0%;
+  font-size: 16px;
+  color: #4158d0;
+  background: #fff;
+  transform: translateY(-50%); }
+
+form .content {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
+  align-items: center;
+  justify-content: space-around; }
+
+form .content .checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+form .content input {
+  width: 15px;
+  height: 15px;
+  background: red; }
+
+form .content label {
+  color: #262626;
+  user-select: none;
+  padding-left: 5px; }
+
+form .content .pass-link {
+  color: ""; }
+
+form .field input[type="submit"] {
+  color: #fff;
+  border: none;
+  padding-left: 0;
+  margin-top: -10px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  background: linear-gradient(-135deg, #1e1427, #a53ef8);
+  transition: all 0.3s ease; }
+
+form .field input[type="submit"]:hover {
+  background: linear-gradient(-135deg, #a53ef8, #1e1427); }
+
+form .field input[type="submit"]:active {
+  transform: scale(0.95); }
+
+form .signup-link {
+  color: #262626;
+  margin-top: 20px;
+  text-align: center; }
+
+form .pass-link a,
+form .signup-link a {
+  color: #4158d0;
+  text-decoration: none; }
+
+form .pass-link a:hover,
+form .signup-link a:hover {
+  text-decoration: underline; }
+
+@media (max-width: 375px) {
+  .wrapper {
+    width: 90%; }
+  .title {
+    font-size: 30px; }
+  .pass-link {
+    font-size: 12px; }
+  .checkbox {
+    font-size: 12px; } }
+
+/* Segunda parte del boton*/
+.btn {
+  color: #fff;
+  border: none;
+  padding-left: 0;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  background: linear-gradient(-135deg, #1e1427, #a53ef8);
+  transition: all 0.3s ease;
+  padding: 10px 40px;
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
+  position: relative; }
+
+.btn:hover {
+  background: linear-gradient(-135deg, #a53ef8, #1e1427);
+  color: #fff; }
+
+.btn:active {
+  transform: scale(0.95); }
+
+#warnings {
+  width: 200px;
+  text-align: center;
+  margin: auto;
+  color: black;
+  padding-top: 20px; }
+
+.ball {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 15px;
+  border-radius: 100%;
+  background-color: #ccffff;
+  margin: 0 auto;
+  opacity: 0; }
+
+/* preload */
+/* configuracion preload */
+.preload {
+  width: 100vw;
+  height: 100vh;
+  background-color: #333333;
+  position: fixed;
+  top: 0rem;
+  left: 0px;
+  z-index: 90000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+/* clase que crea js para que se cierra */
+.cerrar {
+  opacity: 0;
+  transition: all 0.5s; }
+
+.preload__img {
+  animation: lds-dual-ring 1.2s linear infinite;
+  filter: drop-shadow(1.1px 0.1px 0.1px #000000);
+  margin-top: 2rem; }
+
+.preload__img img {
+  width: 105%;
+  height: 60%; }
+
+@keyframes lds-dual-ring {
+  0% {
+    transform: scale(1); }
+  50% {
+    transform: scale(1.05); }
+  100% {
+    transform: scale(1); } }
 
 .texto1 {
   font-size: 28px; }
@@ -527,7 +741,8 @@ hr {
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  opacity: 0.9; }
+  opacity: 0.9;
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3); }
   .hero h2, .hero p {
     margin-bottom: 20px; }
 
