--- a/css/styles.css
+++ b/css/styles.css
@@ -617,51 +617,91 @@ form .signup-link a:hover {
   color: black;
   padding-top: 20px; }
 
-.ball {
-  width: 100px;
-  height: 100px;
-  margin-bottom: 15px;
-  border-radius: 100%;
-  background-color: #ccffff;
-  margin: 0 auto;
-  opacity: 0; }
+#clima-container {
+  padding: 3px;
+  display: none;
+  justify-content: space-between;
+  background-color: #201728; }
 
-/* preload */
-/* configuracion preload */
-.preload {
-  width: 100vw;
-  height: 100vh;
-  background-color: #333333;
-  position: fixed;
-  top: 0rem;
-  left: 0px;
-  z-index: 90000;
+#clima-container > #block {
+  padding: 3px; }
+
+#block {
+  color: var(--blanco); }
+
+#block:first-child {
+  background-color: #201728;
+  color: var(--blanco); }
+
+.information-containier {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
+  font-size: 14px; }
 
-/* clase que crea js para que se cierra */
-.cerrar {
-  opacity: 0;
-  transition: all 0.5s; }
+.info {
+  margin-left: 5px;
+  font-size: 14px; }
 
-.preload__img {
-  animation: lds-dual-ring 1.2s linear infinite;
-  filter: drop-shadow(1.1px 0.1px 0.1px #000000);
-  margin-top: 2rem; }
+#location {
+  font-weight: bold;
+  font-size: 14px; }
 
-.preload__img img {
-  width: 105%;
-  height: 60%; }
+/*--------------------------------------------
+              preload
+----------------------------------------------*/
+.loader,
+.loader:before,
+.loader:after {
+  background: #ffffff;
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em; }
 
-@keyframes lds-dual-ring {
-  0% {
-    transform: scale(1); }
-  50% {
-    transform: scale(1.05); }
+.loader {
+  color: #ffffff;
+  text-indent: -9999em;
+  margin: 88px auto;
+  position: relative;
+  font-size: 11px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s; }
+
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: 0;
+  content: ''; }
+
+.loader:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s; }
+
+.loader:after {
+  left: 1.5em; }
+
+@-webkit-keyframes load1 {
+  0%,
+  80%,
   100% {
-    transform: scale(1); } }
+    box-shadow: 0 0;
+    height: 4em; }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em; } }
+
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em; }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em; } }
 
 .texto1 {
   font-size: 28px; }
@@ -737,7 +777,6 @@ hr {
   height: 550px;
   background: url("../images/04.jpg") center center/cover;
   padding-bottom: 50px;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
@@ -745,6 +784,9 @@ hr {
   box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3); }
   .hero h2, .hero p {
     margin-bottom: 20px; }
+
+.hero2 {
+  display: flex; }
 
 .btn-hero {
   display: inline-block;
@@ -773,3 +815,9 @@ hr {
 
 .lista2 {
   padding-right: 20px; }
+
+#paradis {
+  display: flex; }
+
+#parafooter {
+  display: flex; }
