--- a/scss/origin.scss
+++ b/scss/origin.scss
@@ -7,7 +7,7 @@
 @import "_contacto";
 @import "_servicios";
 @import "_login";
-@import "_preload";
+@import "_ajax";
 
 .texto1 {
     font-size: 28px;
@@ -98,7 +98,7 @@ body {
             height: 550px;
             background: url('../images/04.jpg') center center/cover;
             padding-bottom: 50px;
-            display: flex;
+            
             flex-direction: column;
             align-items: center;
             justify-content: flex-end;
@@ -107,6 +107,9 @@ body {
             h2, p {
                 margin-bottom: 20px;
                 }
+        }
+        .hero2{
+            display: flex;
         }
 
         .btn-hero {
@@ -142,3 +145,9 @@ body {
             padding-right: 20px;
         }
 
+#paradis{
+    display: flex;
+}
+#parafooter{
+    display: flex;
+}
